--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <title>Loading Page</title>
 </head>
 <body>
-  
-<div id="output"></div>
+    <!-- <div id="loading-text">Loading...</div> -->
+
+    <label for="customInput">Custom Input:</label>
+    <input type="text" id="customInput">
 
  <script src="./src/js/app.js"></script>
 </body>
